--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
    <form class=" bg-white rounded-2xl p-8 w-[350px]" >
        <div class="">
         <label class="font-semibold">Mobile Number</label> <br>
-        <input type="text" placeholder="Enter Your Number" class="input rounded-3xl bg-[#F4F5F7] mt-3" />
+        <input id="mobile-number" type="text" placeholder="Enter Your Number" class="input rounded-3xl bg-[#F4F5F7] mt-3" />
       </div>
       <div class="mt-5">
          <label class="font-semibold">4 Digit Pin</label> <br>
-         <input type="text" placeholder="Enter 4 Digit Pin" class="input rounded-3xl bg-[#F4F5F7] mt-3" /><br>
+         <input id="pin-number"  type="text" placeholder="Enter 4 Digit Pin" class="input rounded-3xl bg-[#F4F5F7] mt-3" /><br>
       </div>
        
       <button id="login-btn" class="btn bg-[#0874F2] rounded-3xl mt-7 w-full text-white">Login</button>
    </form>
       
    
-   <script src="./js/home.js"></script>
+   <script src="./js/script.js"></script>
 </body>
 </html>
