Add home.js and make add money feature working fine with validation

--- a/home.html
+++ b/home.html
@@ -89,7 +89,7 @@
             <form class=" bg-white rounded-2xl p-8 ">
                 <div class="mb-3">
                     <label class="font-semibold">Select A Bank</label><br>
-                       <select class="select rounded-3xl bg-[#F4F5F7] mt-3 w-full">
+                       <select id="bank" class="select rounded-3xl bg-[#F4F5F7] mt-3 w-full">
                         <option disabled selected>Select Bank</option>
                         <option>Nrbc Bank</option>
                         <option>Brac Bank</option>
@@ -107,7 +107,7 @@
                
                 <div class="mt-3">
                     <label class="font-semibold">Pin Number</label> <br>
-                    <input id="" type="text" placeholder="Enter 4 Digit Pin" class="input rounded-3xl bg-[#F4F5F7] mt-3 w-full" />
+                    <input id="add-pin" type="text" placeholder="Enter 4 Digit Pin" class="input rounded-3xl bg-[#F4F5F7] mt-3 w-full" />
                 </div>
                 <button id="add-money-btn" class="btn bg-[#0874F2] rounded-3xl mt-7 w-full text-white">Add Money</button>
             </form>
