--- a/home.html
+++ b/home.html
@@ -112,6 +112,29 @@
                 <button id="add-money-btn" class="btn bg-[#0874F2] rounded-3xl mt-7 w-full text-white">Add Money</button>
             </form>
        </div>
+
+       <!-- Cash Withdraw -->
+        <div class="">
+            <h1 class="font-bold my-3">Cash Out</h1>
+            <form class=" bg-white rounded-2xl p-8 ">
+               
+                 <div >
+                     <label class="font-semibold">Agent Number</label> <br>
+                     <input id="agent-number" type="text" placeholder="Enter 11 Digit Number" class="input rounded-3xl bg-[#F4F5F7] mt-3 w-full" />
+                </div>
+                <div class="mt-3">
+                    <label class="font-semibold">Amount</label><br>
+                    <input id="cash-out"  type="text" placeholder="Enter Amount To Withdraw" class="input rounded-3xl bg-[#F4F5F7] mt- w-full" />
+                </div>
+               
+                <div class="mt-3">
+                    <label class="font-semibold">Pin Number</label> <br>
+                    <input id="cash-out-pin" type="text" placeholder="Enter 4 Digit Pin" class="input rounded-3xl bg-[#F4F5F7] mt-3 w-full" />
+                </div>
+                <button id="cash-out-btn" class="btn bg-[#0874F2] rounded-3xl mt-7 w-full text-white">Withdraw Money</button>
+            </form>
+       </div>
+
     </div>
 <script src="./js/home.js"></script>
 </body>
