Add transfer money js code

--- a/home.html
+++ b/home.html
@@ -83,7 +83,7 @@
 
     <div class="all-forms-section max-w-lg mx-auto">
         <!-- Add money -->
-       <div id="add-money-parent">
+       <div id="add-money-parent" class="form">
             <h1 class="font-bold my-3">Add Money</h1>
             <form class=" bg-white rounded-2xl p-8 ">
                 <div class="mb-3">
@@ -113,7 +113,7 @@
        </div>
 
        <!-- Cash Withdraw -->
-        <div id="cash-out-parent" style="display: none;">
+        <div class="form" id="cash-out-parent" style="display: none;">
             <h1 class="font-bold my-3">Cash Out</h1>
             <form class=" bg-white rounded-2xl p-8 ">
                
@@ -135,7 +135,7 @@
        </div>
 
        <!-- Transfer Money -->
-      <div id="transfer-money-parent">
+      <div class="form" id="transfer-money-parent" style="display: none;">
             <h1 class="font-bold my-3">Transfer Money</h1>
             <form class=" bg-white rounded-2xl p-8 ">
                
