--- a/home.html
+++ b/home.html
@@ -66,7 +66,7 @@
 
 
         </div>
-        <div class="border-2 border-gray-300 p-3 rounded-xl cursor-pointer">
+        <div id="pay-bill-cart" class="border-2 border-gray-300 p-3 rounded-xl cursor-pointer">
             <img src="./assets/purse1.png" alt="" class="mx-auto">
             <p class="text-center">Pay Bill</p>
 
@@ -155,6 +155,38 @@
                 <button id="send-btn" class="btn bg-[#0874F2] rounded-3xl mt-7 w-full text-white">Send Now</button>
             </form>
        </div>
+
+       <!-- Pay Bill -->
+       <div id="pay-bill-parent" class="form">
+            <h1 class="font-bold my-3">Pay Bill</h1>
+            <form class=" bg-white rounded-2xl p-8 ">
+                <div class="mb-3">
+                    <label class="font-semibold">Select To Pay</label><br>
+                       <select id="pay-bill-bank-selection" class="select rounded-3xl bg-[#F4F5F7] mt-3 w-full">
+                        <option disabled selected>Select Bank</option>
+                        <option>Nrbc Bank</option>
+                        <option>Brac Bank</option>
+                        <option>IFIC Bank</option>
+                        </select>
+                </div>
+                 <div class="">
+                     <label class="font-semibold">Biller Account Number</label> <br>
+                     <input id="biller-account-number" type="text" placeholder="Enter Account Number" class="input rounded-3xl bg-[#F4F5F7] mt-3 w-full" />
+                </div>
+                <div class="mt-3">
+                    <label class="font-semibold">Amount to Pay</label><br>
+                    <input id="payable-amount"  type="text" placeholder="Add Amount" class="input rounded-3xl bg-[#F4F5F7] mt-3 w-full" />
+                </div>
+               
+                <div class="mt-3">
+                    <label class="font-semibold">Pin Number</label> <br>
+                    <input id="pay-bill-pin" type="text" placeholder="Enter 4 Digit Pin" class="input rounded-3xl bg-[#F4F5F7] mt-3 w-full" />
+                </div>
+                <button id="pay-bill-btn" class="btn bg-[#0874F2] rounded-3xl mt-7 w-full text-white">Pay Now</button>
+            </form>
+       </div>
+
+
     </div>
 <script src="./js/home.js"></script>
 </body>
