Add toggling style

--- a/home.html
+++ b/home.html
@@ -43,36 +43,36 @@
     </div>
 
     <div class=" min-h-[200px] grid grid-cols-3 gap-4 px-4">
-        <div id="add-money-cart" class="border-2 border-gray-300 p-3 rounded-xl cursor-pointer">
+        <div id="add-money-cart" class="cart-btn border-2 border-gray-300 p-3 rounded-xl cursor-pointer">
             <img src="./assets/wallet1.png" alt="" class="mx-auto">
             <p class="text-center">Add Money</p>
         </div>
         
-        <div id="cash-out-cart" class="border-2 border-gray-300 p-3 rounded-xl cursor-pointer">
+        <div id="cash-out-cart" class="cart-btn border-2 border-gray-300 p-3 rounded-xl cursor-pointer">
             <img src="./assets/send1.png" alt="" class="mx-auto">
             <p class="text-center">Cash out</p>
 
 
         </div>
-        <div id="transfer-money-cart" class="border-2 border-gray-300 p-3 rounded-xl cursor-pointer">
+        <div id="transfer-money-cart" class="cart-btn border-2 border-gray-300 p-3 rounded-xl cursor-pointer">
             <img src="./assets/money1.png" alt="" class="mx-auto">
             <p class="text-center">Transfer Money</p>
 
 
         </div>
-        <div id="get-bonus-cart" class="border-2 border-gray-300 p-3 rounded-xl cursor-pointer">
+        <div id="get-bonus-cart" class="cart-btn border-2 border-gray-300 p-3 rounded-xl cursor-pointer">
             <img src="./assets/bonus1.png" alt="" class="mx-auto">
             <p class="text-center">Get Bonus</p>
 
 
         </div>
-        <div id="pay-bill-cart" class="border-2 border-gray-300 p-3 rounded-xl cursor-pointer">
+        <div id="pay-bill-cart" class="cart-btn border-2 border-gray-300 p-3 rounded-xl cursor-pointer">
             <img src="./assets/purse1.png" alt="" class="mx-auto">
             <p class="text-center">Pay Bill</p>
 
 
         </div>
-        <div class="border-2 border-gray-300 p-3 rounded-xl cursor-pointer">
+        <div id="transactions-cart" class="cart-btn border-2 border-gray-300 p-3 rounded-xl cursor-pointer">
             <img src="./assets/transaction1.png" alt="" class="mx-auto">
             <p class="text-center">Transactions</p>
 
